	[Olaf "Rhialto" Seibert]

    9 - Re-introduced TwmWindow.oldvs, used to avoid calling
	XReparentWindow() when possibe (it messed up the stacking order
	of windows). However, maybe the use of .vs should be rethought a
	bit: in Vanish() it is now set to NULL with the old value kept
	in .oldvs.  However the window is still a child of the same vs.
	Maybe it is better not to set it to NULL and then, when *really*
	changing the virtual screen, .vs can be used instead of .oldvs.

	This whole "virtual screen" thing is unexplained in the manual,
	which even uses it as a synonym for "workspace" already in the
	introduction paragraph. (There also does not seem to be a way
	now to test virtual screens in captive windows) I suspect that
	all this causes lots of confusion, and when cleared up, can
	simplify the code a lot. 

	I also fixed up the horrible indentation in the functions
	where I changed something.
	[Olaf "Rhialto" Seibert]

   10 - Fixed interaction between "inner" and "outer" workspace
	selection with "captive" windows. This was because the Gnome
	"_WIN_WORKSPACE" property is used in 2 conflicting ways: for
	client windows it indicates which workspace they are in, for
	root windows it indicates which workspace they show. Captive
	windows are both. Also, the initially selected inner workspace
	is now the first, not the same as the outer workspace (this had
	a different cause).
	[Olaf "Rhialto" Seibert]

   11 - Introduce Scr->XineramaRoot to store the root window that
	encompasses all virtual screen rootwindows. This further reduces
	any need to use RealRoot and/or CaptiveRoot.
	Add a schematic drawing that clarifies the relation between the
	various root-type windows.
	[Olaf "Rhialto" Seibert]

   12 - Get rid of all non-locale code and make I18N the silent default
	(doesn't have to be mentioned any more).
	THIS WILL BREAK CTWM ON OLDER (PRE-LOCALE) ENVIRONMENTS.
	I strongly recommend an upgrade to "post-locale" standards.
	[Richard Levitte]